--- a/source/style/sections/_header.scss
+++ b/source/style/sections/_header.scss
@@ -4,7 +4,8 @@
   align-items: center;
   position: absolute; 
   height: 68px; 
-  width: 89%;
+  width: 100%;
+  padding: 0 5.5%;
   z-index:2;
 
 }
