--- a/source/style/sections/_section_1.scss
+++ b/source/style/sections/_section_1.scss
@@ -43,14 +43,16 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 76vw;
-  height: 12vw;
+  width: 76%;
+  height: 20rem;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% auto;
   background-position: left bottom;
   background-image: url("../../assets/img/images_1800/stones.png");
   filter: brightness(60%); 
-  z-index:100;   
+  z-index:100;
+
+    
 }
 
 .main_title {
